fix(octra): jumping to unit on multi-line signal display not working properly

--- a/apps/octra/src/app/core/component/transcr-overview/transcr-overview.component.css
+++ b/apps/octra/src/app/core/component/transcr-overview/transcr-overview.component.css
@@ -17,7 +17,8 @@
   cursor: pointer;
 }
 
-.segment-transcript {
+.segment-transcript p {
+  margin: 0 !important;
 }
 
 .found-errors {
